unpackaged/objects/Place__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>City</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <label>Place</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Place Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Places</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>